# lovable-presentation-timer

./: LICENSE  README.md  SIGNING.md  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.app.json
.github/workflows/: build.yml
.lovable/: plan.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ErrorBoundary.tsx  MilestoneHeartOverlay.tsx
src/lib/: tauriWindow.ts  windowProbe.ts
src/pages/: Heart.tsx  Index.tsx
